--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="nav__left">
                     <a href="" class="logo"><img src="img/Logo.svg" alt="">
                     </a>
-                    <p class="nav__logo-text">Расправь плечи 
+                    <p class="nav__logo-text">Расправь плечи
                         в теплом доме</p>
                 </div>
                 <div class="nav__right">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </nav>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container">
             <div class="header__content">
                 <div class="header__left">
@@ -50,7 +50,7 @@
                             <p class="rules__text">Вне зависимости от погодных условий</p>
                         </div>
                     </div>
-                    <h1 class="header-title">Доставим газ  за 4 часа</h1>
+                    <h1 class="header-title">Доставим газ за 4 часа</h1>
                     <div class="header-title__text">
                         <p>в любую точку Москвы и Московской области</p> <img src="img/Frame.svg" alt="">
                     </div>
@@ -64,8 +64,8 @@
                 </div>
             </div>
         </div>
-    </header> -->
-<!-- <main class="main">
+    </header> 
+     <main class="main">
         <section class="gasPrice">
             <div class="container">
                 <h2 class="gasPrice-title title">Стоимость газа в ваш газгольдер сегодня</h2>
@@ -187,27 +187,27 @@
                     </div>
                 </div>
             </div>
-        </section>  -->
-              <section class="volume">
-            <div class="container">
-                <div class="volume__content">
-                    <h2 class="volume-title title">Выберите свой объём Газовоза</h2>
-                    <div class="volume-buttons">
-                        <button class="volume__button ">Малый
-                            2000 л.</button>
-                        <button class="volume__button">Средний
-                            6000 л.</button>
-                        <button class="volume__button volume__button-10">Стандартный
-                            10 000 л.</button>
-                        <button class="volume__button ">Оптовый
-                            40 000 л.</button>
-                    </div>
-                    <img src="img/section3.png" alt="" class="volume__img">
-                    <button class="volume-btn">Заказать газ</button>
+        </section>  
+    <section class="volume">
+        <div class="container">
+            <div class="volume__content">
+                <h2 class="volume-title title">Выберите свой объём Газовоза</h2>
+                <div class="volume-buttons">
+                    <button class="volume__button ">Малый
+                        2000 л.</button>
+                    <button class="volume__button">Средний
+                        6000 л.</button>
+                    <button class="volume__button volume__button-10">Стандартный
+                        10 000 л.</button>
+                    <button class="volume__button ">Оптовый
+                        40 000 л.</button>
                 </div>
+                <img src="img/section3.png" alt="" class="volume__img">
+                <button class="volume-btn">Заказать газ</button>
             </div>
-        </section>
-    <!--        <section class="clients">
+        </div>
+    </section>
+            <section class="clients">
             <div class="container">
                 <h2 class="clients-title title">Отзывы наших клиентов</h2>
                 <div class="clients__content">
@@ -332,7 +332,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer> 
 </body>
 
 </html>
